--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,6 +11,9 @@ jobs:
   run_checks:
     runs-on: ubuntu-latest
 
+    env:
+      PYTHONPATH: '${{ github.workspace }}/packages'
+
     steps:
     - uses: actions/checkout@v3
       with:
